Added dist plugin.